--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
   "name": "wrapped",
-  "version": "1.0.0",
-  "description": "UGAHacks Wrapped 2025 - Magic Edition",
-  "main": "main.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "npx http-server",
-    "start": "npx http-server -p 8080"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ugahacks/wrapped.git"
-  },
-  "keywords": ["ugahacks", "wrapped", "spotify-wrapped"],
-  "author": "UGAHacks",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/ugahacks/wrapped/issues"
-  },
-  "homepage": "https://github.com/ugahacks/wrapped#readme",
   "dependencies": {
-    "aos": "^2.3.4"
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
+    "next": "16.1.6",
+    "radix-ui": "^1.4.3",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.6",
+    "shadcn": "^3.8.4",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5"
   }
 }
